added Discovery Server and Client with Netflix Eureka Server